--- a/index.html
+++ b/index.html
@@ -854,8 +854,29 @@
             </div><!-- //swiper -->
         </div><!-- // carousel-slider-area-->
       </div>
-      <div class="recom-song">
-
+      <div class="recom-r">
+        <div class="recom-song">
+        </div>
+        <div id="dust">
+          <h1>오늘의 미세먼지는?</h1>
+          <div id="dustStatus">
+              <h2 id="location">지역</h2>
+              <div class="status-wrap">
+                <div class="dust-wrap">
+                  <p id="dustStatusText">미세먼지</p>
+                  <div id="imageContainer">
+                    <img id="statusImage1" src="" alt="날씨 상태 이미지">
+                  </div>
+                </div>
+                <div class="ozone-wrap">
+                  <p id="ozoneStatusText">오존</p>
+                  <div id="imageContainer">
+                      <img id="statusImage2" src="" alt="날씨 상태 이미지">
+                  </div>
+                </div>
+              </div>
+          </div>
+        </div>
       </div>
       <!-- <div id="dust" class="dust_new">
         <h1>오늘의 미세먼지는?</h1>
@@ -1338,9 +1359,6 @@
       </div>
     </footer>
   </div>
-  <script>
-    
-    </script>
   <script src="js/swiper.js"></script>
   <script src="js/weather.js"></script>
   <script src="js/bookmark.js"></script>
