--- a/index.html
+++ b/index.html
@@ -856,6 +856,7 @@
       </div>
       <div class="recom-r">
         <div class="recom-song">
+          
         </div>
         <div id="dust">
           <h1>오늘의 미세먼지는?</h1>
@@ -863,42 +864,23 @@
               <h2 id="location">지역</h2>
               <div class="status-wrap">
                 <div class="dust-wrap">
-                  <p id="dustStatusText">미세먼지</p>
+                  <span>미세먼지</span>
                   <div id="imageContainer">
                     <img id="statusImage1" src="" alt="날씨 상태 이미지">
+                    <p id="dustStatusText">미세먼지</p>
                   </div>
                 </div>
                 <div class="ozone-wrap">
-                  <p id="ozoneStatusText">오존</p>
+                  <span>오존</span>
                   <div id="imageContainer">
                       <img id="statusImage2" src="" alt="날씨 상태 이미지">
+                      <p id="ozoneStatusText">오존</p>
                   </div>
                 </div>
               </div>
           </div>
         </div>
-      </div>
-      <!-- <div id="dust" class="dust_new">
-        <h1>오늘의 미세먼지는?</h1>
-        <div class="dust_new_box">
-          <h2 class="my_area">지역</h2>
-          <div class="dust_new_list clearfix">
-            <div class="dust_new_name">
-              <p class="tit">미세먼지</p>
-              <p class="" id ="status"></p>
-            </div>
-          <img src="" class="dust_new_icon" id ="dust_img" alt="" />
-          </div>
-          <div class="dust_new_list clearfix">
-            <div class="dust_new_name">
-              <p class="tit">오존</p>
-              <p class="" id="ozone"></p>
-            </div>
-            <img src="" class="dust_new_icon" id="ozone_img" alt=""/>
-          </div>
-          </div>
-      </div> -->
-      
+      </div> 
     </section>
     <div id="ad2">
       <div>
