--- a/index.html
+++ b/index.html
@@ -639,40 +639,40 @@
               <ul class="bookmark-grid-gap">
                 <li class="bookmark-top">
                   <div class="plus_btn_wrap">
-                      <span class="delete">
-                        <a href="#" class="plus_btn">
+                      <p class="delete">
+                        <span class="plus_btn">
                           <img src="img/bookmark/plus.svg" alt="바로가기 추가">
-                        </a>
+                        </span>
                       </span>
-                      <span class="delete">
-                        <a href="#" class="plus_btn">
+                      <p class="delete">
+                        <span class="plus_btn">
                           <img src="img/bookmark/plus.svg" alt="바로가기 추가">
-                        </a>
-                      </span>
-                      <span class="delete">
-                        <a href="#" class="plus_btn">
+                        </span>
+                      </p>
+                      <p class="delete">
+                        <span class="plus_btn">
                           <img src="img/bookmark/plus.svg" alt="바로가기 추가">
-                        </a>
-                      </span>
+                        </span>
+                      </p>
                   </div>
                 </li>
                 <li class="bookmark-bottom">
                   <div class="plus_btn_wrap">
-                      <span class="delete">
-                        <a href="#" class="plus_btn">
+                      <p class="delete">
+                        <span class="plus_btn">
                           <img src="img/bookmark/plus.svg" alt="바로가기 추가">
-                        </a>
-                      </span>
-                      <span class="delete">
-                        <a href="#" class="plus_btn">
+                        </span>
+                      </p>
+                      <p class="delete">
+                        <span class="plus_btn">
                           <img src="img/bookmark/plus.svg" alt="바로가기 추가">
-                        </a>
-                      </span>
-                      <span class="delete plus_btn">
-                        <a href="#" class="plus_btn">
+                        </span>
+                      </p>
+                      <p class="delete">
+                        <span class="plus_btn">
                           <img src="img/bookmark/plus.svg" alt="바로가기 추가">
-                        </a>
-                      </span>
+                        </span>
+                      </p>
                   </div>
                 </li>
               </ul>
