--- a/index.html
+++ b/index.html
@@ -855,6 +855,7 @@
         </div><!-- // carousel-slider-area-->
       </div>
       <div class="recom-r">
+        <div id="map" style="width: 500px; height: 400px;"></div>
         <div id="dust">
           <h1>오늘의 미세먼지는?</h1>
           <div id="dustStatus">
@@ -1343,5 +1344,6 @@
   <script src="js/bookmark.js"></script>
   <script src="js/header.js"></script>
   <script src="js/footer.js"></script>
+  <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
 </body>
 </html>
