--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
         </div><!-- // carousel-slider-area-->
       </div>
       <div class="recom-r">
-        <div id="map" style="width: 500px; height: 400px;"></div>
+        <!-- <div id="map" style="width: 500px; height: 400px;"></div> -->
         <div id="dust">
           <h1>오늘의 미세먼지는?</h1>
           <div id="dustStatus">
