--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>키드키즈</title>
   <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
-  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=770d3a3d2219a639452acca8e59a62d4&libraries=services"></script>
-  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=770d3a3d2219a639452acca8e59a62d4"></script>
   <!--swiper 라이브러리 연결-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -646,7 +644,6 @@
                         <span class="plus_btn">
                           <img src="img/bookmark/plus.svg" alt="바로가기 추가">
                         </span>
-                      </span>
                       <p class="delete">
                         <span class="plus_btn">
                           <img src="img/bookmark/plus.svg" alt="바로가기 추가">
@@ -860,21 +857,19 @@
       <div class="recom-r">
         <!-- <div id="map" style="width: 500px; height: 400px;"></div> -->
         <div id="dust">
-          <h1>오늘의 미세먼지는?</h1>
+          <h2>오늘의 미세먼지는?</h2>
           <div id="dustStatus">
               <h2 id="location">지역</h2>
               <div class="status-wrap">
                 <div class="dust-wrap">
                   <span>미세먼지</span>
-                  <div id="imageContainer">
-                    <img id="statusImage1" src="" alt="날씨 상태 이미지">
+                  <div id="dust-imageContainer">
                     <p id="dustStatusText">미세먼지</p>
                   </div>
                 </div>
                 <div class="ozone-wrap">
                   <span>오존</span>
-                  <div id="imageContainer">
-                      <img id="statusImage2" src="" alt="날씨 상태 이미지">
+                  <div id="ozone-imageContainer">
                       <p id="ozoneStatusText">오존</p>
                   </div>
                 </div>
